--- a/Demo7/Demo7/Base.lproj/Main.storyboard
+++ b/Demo7/Demo7/Base.lproj/Main.storyboard
@@ -159,21 +159,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="168-fA-y5H">
-                                <rect key="frame" x="22.5" y="173.5" width="330" height="320"/>
+                                <rect key="frame" x="22.5" y="233.5" width="330" height="200"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="320" id="CFb-yG-2W2"/>
+                                    <constraint firstAttribute="height" constant="200" id="CFb-yG-2W2"/>
                                     <constraint firstAttribute="width" constant="330" id="DSo-Co-H1X"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mTP-7i-EnW">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mTP-7i-EnW">
                                     <size key="itemSize" width="171" height="160"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ItemCell" id="oaV-xe-bZ7" customClass="ItemCell" customModule="Demo7" customModuleProvider="target">
-                                        <rect key="frame" x="79.5" y="0.0" width="171" height="160"/>
+                                        <rect key="frame" x="50" y="20" width="171" height="160"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="171" height="160"/>
@@ -226,6 +226,10 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XxK-8S-mcY">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="200"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="Jab-oW-Pak" id="tay-Ua-Xdn"/>
                                     <outlet property="delegate" destination="Jab-oW-Pak" id="MGi-1i-oQq"/>
